--- a/06-webserver/views/partials/footer.hbs
+++ b/06-webserver/views/partials/footer.hbs
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-
-<body>
-
-    {{> navbar}}
-    <h1>Demo Node Server</h1>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
-    </div>
-
-    <footer>
-        Miller Camilo Vega - 2020
+<footer>
+        Miller Camilo Vega - {{ getYear }}
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
